# ssh-notify

./: Cargo.toml
src/: agent-bin.rs  config.rs  main.rs  model.rs
src/agent/: discord.rs  email.rs  mod.rs
