[package]
name = "ssh-notify"
version = "0.2.0"
authors = ["Emil H. Clausen (SEQUOIIA) <sequoiia@hummel.yt>"]
edition = "2018"

[dependencies]
toml = "^0.5"
serde_derive = "^1.0"
serde = "^1.0"
log = "^0.4"
pretty_env_logger = "^0.4"
reqwest = { version = "^0.11", features = ["blocking"] }
lettre = "0.9.2"
lettre_email = "0.9.2"
hostname = "0.3"
ipnet = "^2.5"

[[bin]]
name = "ssh-notify"
path = "src/main.rs"

[[bin]]
name = "ssh-notify-agent"
path = "src/agent-bin.rs"